--- a/reepay-subscription-example/src/main/resources/templates/home.html
+++ b/reepay-subscription-example/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row top-buffer">
         <div class="col-md-2 col-md-offset-5">
-            <a class="btn btn-primary btn-block" href="/register">Signups</a>
+            <a class="btn btn-primary btn-block" href="/register">Register</a>
 
             <a class="btn btn-primary btn-block" href="/customers">Registered customers</a>
 
